--- a/VChuang/res/layout/activity_main.xml
+++ b/VChuang/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:id="@+id/main_tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabIndicatorColor="@color/gray" />
+        app:tabIndicatorColor="@color/gray" 
+        />
 
 </LinearLayout>
