--- a/VChuang/res/layout/fragment_vquan.xml
+++ b/VChuang/res/layout/fragment_vquan.xml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#00ff00" >
-    
+    android:layout_height="match_parent" >
 
-    <TextView 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="V圈"/>
-    
-</LinearLayout>
+        android:text="Hello World!" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_behavior="com.zlw.view.MyBehavior2"
+        android:background="#113D95" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="58dp"
+        android:layout_height="58dp"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:layout_anchor="@id/rv"
+        app:layout_anchorGravity="bottom|right|end"
+        app:layout_behavior="com.zlw.view.MyBehavior"
+        android:src="@drawable/icon_fire"
+        app:backgroundTint="#0767C8"
+        app:elevation="6dp"
+        app:fabSize="normal" />
+
+</android.support.design.widget.CoordinatorLayout>
