--- a/VChuang/res/layout/fragment_discover.xml
+++ b/VChuang/res/layout/fragment_discover.xml
@@ -1,14 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#ffffff" >
-    
+    android:padding="5dp" >
 
-    <TextView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="发现"/>
-    
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/rl_lunbo"
+        android:layout_width="match_parent"
+        android:layout_height="160dp" >
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <LinearLayout
+            android:id="@+id/ll_point_container"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_alignParentBottom="true"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:padding="5dp" >
+        </LinearLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_secondfloor"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_below="@id/rl_lunbo"
+        android:background="#ffffff" >
+
+        <Button
+            android:id="@+id/btn_project"
+            android:layout_width="150dp"
+            android:layout_height="96dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/bg_discover_project"
+            android:text="项目库" 
+            android:textColor="#ffffff"
+            />
+
+        <Button
+            android:id="@+id/btn_investor"
+            android:layout_width="150dp"
+            android:layout_height="96dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/bg_discover_investor"
+            android:text="投资人" 
+            android:textColor="#ffffff"
+            />
+    </RelativeLayout>
+    <RelativeLayout 
+        android:id="@+id/rl_line"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#EFEFEF"
+        android:layout_below="@id/rl_secondfloor"></RelativeLayout>
+    <RelativeLayout 
+        android:id="@+id/rl_title_activity"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:background="#ffffff"
+        android:layout_below="@id/rl_line">
+        <TextView 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="同城活动"/>
+    </RelativeLayout>
+    <ListView 
+        android:id="@+id/lv_activity"
+        android:layout_width="match_parent"
+        android:layout_height="190dp"
+        android:background="#EFEFEF"
+        android:layout_below="@id/rl_title_activity"/>
+
+</RelativeLayout>
