--- a/VChuang/res/layout/activity_project.xml
+++ b/VChuang/res/layout/activity_project.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
              >
-			<ImageButton 
+			<ImageButton
+			    android:id="@+id/imgbtn_back_project" 
 			    android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:background="@drawable/back"
@@ -39,7 +40,7 @@
             <EditText
                 android:id="@+id/et_search_project"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:drawableLeft="@drawable/icon_search_discover"
                 android:drawablePadding="10dp"
                 android:background="@drawable/shape_circle_rectangle"
