--- a/VChuang/res/layout/investor_item.xml
+++ b/VChuang/res/layout/investor_item.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal" 
+    android:padding="10dp">
 
-    <com.jyy.view.ImageViewForUrl
+    <com.zlw.view.CircleImageView
         android:id="@+id/img_icon_investor_item"
-        android:layout_width="68dp"
-        android:layout_height="68dp"
+        android:layout_width="58dp"
+        android:layout_height="58dp"
         android:layout_gravity="center"
         />
 
@@ -49,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:textColor="#666666"
-                android:textSize="13sp" 
+                android:textSize="10sp" 
                 android:text="收货项目:"/>
 
             <TextView
@@ -59,7 +60,7 @@
                 android:layout_toRightOf="@id/tv_hanrvest_investor_item"
                 android:text="1151"
                 android:textColor="#4BBFEF"
-                android:textSize="13sp" />
+                android:textSize="10sp" />
         </RelativeLayout>
     </LinearLayout>
     
