--- a/VChuang/res/layout/project_item.xml
+++ b/VChuang/res/layout/project_item.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal" 
+    android:padding="10dp">
 
     <com.jyy.view.ImageViewForUrl
         android:id="@+id/img_logo_project_item"
-        android:layout_width="68dp"
-        android:layout_height="68dp"
+        android:layout_width="58dp"
+        android:layout_height="58dp"
         android:layout_gravity="center"
+        android:layout_margin="8dp"
         />
 
     <LinearLayout
@@ -35,7 +37,7 @@
             android:layout_marginBottom="8dp"
             android:maxLines="2"
             android:textColor="#666666"
-            android:textSize="13sp" 
+            android:textSize="12sp" 
             android:text="儿童动漫微电影第一平台"/>
 
         <RelativeLayout
@@ -49,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:textColor="#666666"
-                android:textSize="13sp" 
+                android:textSize="10sp" 
                 android:text="北京"/>
 
             <TextView
@@ -60,7 +62,7 @@
                 android:layout_alignParentRight="true"
                 android:text="5"
                 android:textColor="#666666"
-                android:textSize="13sp" />
+                android:textSize="10sp" />
         </RelativeLayout>
     </LinearLayout>
     
