--- a/VChuang/res/layout/activity_project.xml
+++ b/VChuang/res/layout/activity_project.xml
@@ -39,7 +39,7 @@
             android:gravity="center_vertical" >
 
             <TextView
-                android:id="@+id/et_search_project"
+                android:id="@+id/tv_search_project"
                 android:layout_width="match_parent"
                 android:layout_height="26dp"
                 android:layout_centerInParent="true"
