--- a/VChuang/res/layout/project_item.xml
+++ b/VChuang/res/layout/project_item.xml
@@ -2,23 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" 
-    android:padding="10dp">
+    android:orientation="horizontal"
+    android:padding="10dp" >
 
-    <com.jyy.view.ImageViewForUrl
+    <com.zlw.view.CircleImageView
         android:id="@+id/img_logo_project_item"
         android:layout_width="58dp"
         android:layout_height="58dp"
         android:layout_gravity="center"
-        android:layout_margin="8dp"
-        />
+        android:layout_margin="8dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="vertical" 
-        android:layout_marginLeft="10dp">
+        android:layout_marginLeft="10dp"
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/tv_title_project_item"
@@ -26,9 +25,9 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:singleLine="true"
+            android:text="童漫秀"
             android:textColor="#000000"
-            android:textSize="16sp" 
-            android:text="童漫秀"/>
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_introduce_project_item"
@@ -36,9 +35,9 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:maxLines="2"
+            android:text="儿童动漫微电影第一平台"
             android:textColor="#666666"
-            android:textSize="12sp" 
-            android:text="儿童动漫微电影第一平台"/>
+            android:textSize="12sp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -50,22 +49,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
+                android:text="北京"
                 android:textColor="#666666"
-                android:textSize="10sp" 
-                android:text="北京"/>
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/tv_support_project_item"
-                android:layout_marginRight="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
                 android:text="5"
                 android:textColor="#666666"
                 android:textSize="10sp" />
         </RelativeLayout>
     </LinearLayout>
-    
-    
 
 </LinearLayout>
