--- a/VChuang/res/layout/item_tab1_recycler_view_.xml
+++ b/VChuang/res/layout/item_tab1_recycler_view_.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
@@ -8,12 +6,12 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     card_view:cardCornerRadius="4dp"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardUseCompatPadding="true" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical" >
 
         <ImageView
             android:id="@+id/icon"
@@ -37,7 +35,7 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/content"
+            android:id="@+id/item_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/title"
@@ -46,7 +44,6 @@
             android:text="content"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
-
-
     </RelativeLayout>
+
 </android.support.v7.widget.CardView>
