--- a/VChuang/res/layout/rv_item.xml
+++ b/VChuang/res/layout/rv_item.xml
@@ -56,6 +56,7 @@
                 android:id="@+id/item_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
                 android:padding="10dp"
                 android:text="大家看看我们的付费问题回答如何？有市场方面的合作吗？"
                 android:textColor="#111"
@@ -67,32 +68,45 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:orientation="horizontal"
-                android:paddingLeft="6dp" >
+                android:gravity="center_horizontal"
+                android:orientation="horizontal" >
 
                 <ImageView
-                    android:layout_width="0dp"
+                    android:id="@+id/item_img0"
+                    android:layout_width="90dp"
+                    android:layout_height="160dp"
+                    android:layout_weight="1"
+                    android:scaleType="fitXY"
+                    android:visibility="gone" />
+
+                <ImageView
+                    android:id="@+id/item_img1"
+                    android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_marginLeft="5dp"
                     android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/test_img1" />
+                    android:scaleType="fitCenter"
+                    android:visibility="gone" />
 
                 <ImageView
-                    android:layout_width="0dp"
+                    android:id="@+id/item_img2"
+                    android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_marginLeft="5dp"
                     android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/test_img2" />
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/test_img2"
+                    android:visibility="gone" />
 
                 <ImageView
-                    android:layout_width="0dp"
+                    android:id="@+id/item_img3"
+                    android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_marginLeft="5dp"
                     android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/test_img3" />
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/test_img3"
+                    android:visibility="gone" />
             </LinearLayout>
 
             <!-- 点赞部分 -->
