--- a/VChuang/res/layout/activity_item.xml
+++ b/VChuang/res/layout/activity_item.xml
@@ -9,25 +9,25 @@
         android:id="@+id/tv_title_activity"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="V创投递直通车，助力高效融资(10月最后10席)"
         android:textColor="#000000"
         android:layout_marginBottom="50dp"/>
+        <!-- android:text="V创投递直通车，助力高效融资(10月最后10席)" -->
     <TextView 
         android:id="@+id/tv_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="北京"
         android:layout_below="@id/tv_title_activity"
         android:textSize="10dp"
         android:layout_marginRight="15dp"/>
+        <!-- android:text="北京" -->
     <TextView 
         android:id="@+id/tv_time"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:text="2016.11.2"
         android:layout_toRightOf="@id/tv_location"
         android:layout_below="@id/tv_title_activity"
         android:textSize="10dp"/>
+        <!-- android:text="2016.11.2" -->
 
     <ImageView
         android:id="@+id/iv_activity"
