赵乐玮：解决界面重叠的BUG

--- a/VChuang/res/layout/fragment_vquan.xml
+++ b/VChuang/res/layout/fragment_vquan.xml
@@ -7,7 +7,9 @@
     <com.zlw.pullloadmorerecyclerview.PullLoadMoreRecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:clipChildren="false"
+        android:clipToPadding="false" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
