--- a/VChuang/res/layout/activity_item.xml
+++ b/VChuang/res/layout/activity_item.xml
@@ -1,38 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:background="#ffffff">
-    
-    <TextView 
-        android:id="@+id/tv_title_activity"
-        android:layout_width="200dp"
+    android:gravity="center_horizontal" >
+
+    <RelativeLayout
+        android:id="@+id/rl_item"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:layout_marginBottom="50dp"/>
+        android:background="#ffffff"
+        android:padding="10dp" >
+
+        <TextView
+            android:id="@+id/tv_title_activity"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:textColor="#000000" />
         <!-- android:text="V创投递直通车，助力高效融资(10月最后10席)" -->
-    <TextView 
-        android:id="@+id/tv_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_title_activity"
-        android:textSize="10dp"
-        android:layout_marginRight="15dp"/>
+
+        <TextView
+            android:id="@+id/tv_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_title_activity"
+            android:layout_marginRight="15dp"
+            android:textSize="10dp" />
         <!-- android:text="北京" -->
-    <TextView 
-        android:id="@+id/tv_time"
-        android:layout_width="130dp"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/tv_location"
-        android:layout_below="@id/tv_title_activity"
-        android:textSize="10dp"/>
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_title_activity"
+            android:layout_toRightOf="@id/tv_location"
+            android:textSize="10dp" />
         <!-- android:text="2016.11.2" -->
 
-    <ImageView
-        android:id="@+id/iv_activity"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentRight="true" />
+        <ImageView
+            android:id="@+id/iv_activity"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentRight="true" />
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tv_activity_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" 
+        android:visibility="gone"
+        android:background="#ffffff"
+        android:paddingBottom="40dp"/>
 
 </RelativeLayout>
